--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="footer-logo-container" >
               <img src="./images/logo01.png" alt="樂活全齡綜合診所 Logo" class="footer-logo">
-              <h5 class="text-white mt-3">●樂活全齡綜合診所●</h5>
+              <h5 class="text-white mt-3">樂活全齡綜合診所</h5>
               <p class="text-light small mt-2">專業醫療服務，照顧您全家健康</p>
             </div>
           </div>
