--- a/index.html
+++ b/index.html
@@ -414,6 +414,11 @@
       <a href="#" class="to-top-button"><i class="bi bi-arrow-up-circle-fill"></i></a>
     </div>
 
+     <!-- 回到頂部按鈕 -->
+    <div class="to-top-container">
+      <a href="#" class="to-top-button"><i class="bi bi-arrow-up-circle-fill"></i></a>
+    </div>
+
 
 
   <script>
@@ -469,8 +474,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/main.js"></script>
 
-  <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
+  <!-- Facebook SDK -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
     
 
   </body>
