--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="container doctor">
         <h2 class="text-center mb-5 fade-in">醫師團隊</h2>                                                                                                                                            
         <div class="row">
-          <div class="col-md-3 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.1s;">
               <div class="card-body">
                 <img src="./images/doctor1.jpg" alt="沈子翔 院長" class="lazy-load" 
@@ -204,7 +204,7 @@
       
           </div>
           
-          <div class="col-md-3 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.3s;">
               <div class="card-body">
                 <img src="./images/doctor4.jpg" alt="羅際衛 醫師" class="lazy-load" loading="lazy" >
@@ -213,7 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.4s;">
               <div class="card-body">
                 <img src="./images/doctor3.jpg" alt="賴俊達 醫師" class="lazy-load" loading="lazy">
@@ -223,7 +223,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.4s;">
               <div class="card-body">
                 <img src="./images/doctor5.jpg" alt="曾啓洲 醫師" class="lazy-load" loading="lazy">
@@ -233,7 +233,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.2s;">
               <div class="card-body">
                 <img src="./images/doctor2.jpg" alt="王世宗 醫師" class="lazy-load" loading="lazy" >
