8月周更門診表更新

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="row">
           <div class="col-md-10  mx-auto">
             <div class="card service-card  fade-in" style="animation-delay: 0.1s;">
-              <img id="clinicSchedule" src="./images/week2.jpg" alt="門診時間表" class="week" loading="lazy">
+              <img id="clinicSchedule" src="./images/week_1.jpg" alt="門診時間表" class="week" loading="lazy">
               <p id="weekInfo"></p>
             </div>
           </div>
@@ -426,12 +426,24 @@
 
  const weekMap = {
   "2025-07-28": {
-    weekRange: "7/28～9/1",
-    image: "week5.jpg"
+    weekRange: "7/28～8/1",
+    image: "week_1.jpg"
   },
   "2025-08-04": {
     weekRange: "8/4～8/8",
-    image: "week1.jpg"
+    image: "week_2.jpg"
+  },
+  "2025-08-11": {
+    weekRange: "8/11～8/15",
+    image: "week_3.jpg"
+  },
+  "2025-08-18": {
+    weekRange: "8/18～8/22",
+    image: "week_4.jpg"
+  },
+  "2025-08-25": {
+    weekRange: "8/25～8/29",
+    image: "week_5.jpg"
   }
 };
 
