〈週三時間為14:00-17:00〉

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <section id="weekfrom" class="py-5 bg-light">
       <div class="container item allageweek">
         <h2 class="text-center mb-3 fade-in">本週門診表 <br><span id="weekRange">8/4～8/8</span></h2>
-        <p class="txttxt mb-3" >醫師排班若有異動，以 FB 最新公告為主。</p>                                                           
+        <p class="txttxt mb-3" >〈週三時間為14:00-17:00〉</p> 
+        <p class="txttxt mb-3" >※醫師排班若有異動，以 FB 最新公告為主。</p>                                                           
         <div class="row">
           <div class="col-md-10  mx-auto">
             <div class="card service-card  fade-in" style="animation-delay: 0.1s;">
