--- a/health-Edu.html
+++ b/health-Edu.html
@@ -32,6 +32,20 @@
     <meta name="keywords" content="樂活全齡綜合診所,台南家醫科,家醫科診所,家庭醫學,台南家庭醫學,仁德家庭醫學,仁德皮膚,全齡綜合診所,台南樂活全齡,台南仁德樂活全齡,台南仁德全齡綜合診所,台南仁德全齡綜合診所,全齡診所,樂活全齡,兒科疾病,慢性整合醫學,社區與預防醫學,仁德診所,樂活全齡照顧全民">
     <title>衛教宣導｜樂活全齡綜合診所｜</title>
     
+    <!-- Owl Carousel CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+    <!-- Slick CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+
+    <!-- Swiper CSS -->
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+    <!-- Lightbox CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
+
     <style>
       /* 針對 iOS 設備的修正 */
       @supports (-webkit-touch-callout: none) {
@@ -182,7 +196,7 @@ input[type=radio]:checked {
   transform: translate3d(-20%, 0, -100px);
 }
 
-</style>
+    </style>
   </head>
   <body>
     <!-- 導航欄 -->
@@ -227,21 +241,61 @@ input[type=radio]:checked {
     </nav>
 
 
-<section id="slider">
-  <input type="radio" name="slider" id="s1" checked>
-  <input type="radio" name="slider" id="s2">
-  <input type="radio" name="slider" id="s3">
-  <input type="radio" name="slider" id="s4">
-  <input type="radio" name="slider" id="s5">
+<!-- Owl Carousel CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
-  <label for="s1" id="slide1"><img src="./images/0121.jpg" alt=""></label>
-  <label for="s2" id="slide2"><img src="./images/0121-1.jpg" alt=""></label>
-  <label for="s3" id="slide3"><img src="./images/0211.jpg" alt=""></label>
-  <label for="s4" id="slide4"><img src="./images/0313.jpg" alt=""></label>
-  <label for="s5" id="slide5"><img src="./images/0410.jpg" alt=""></label>
-  <label for="s6" id="slide5"><img src="./images/0619.jpg" alt=""></label>
-  <label for="s7" id="slide5"><img src="./images/0724.jpg" alt=""></label>
-</section>
+<!-- Owl Carousel HTML -->
+<div class="owl-carousel">
+  <div>
+    <a href="./images/0121.jpg" data-lightbox="gallery">
+      <img src="./images/0121.jpg" alt="">
+    </a>
+  </div>
+  <div>
+    <a href="./images/0121-1.jpg" data-lightbox="gallery">
+      <img src="./images/0121-1.jpg" alt="">
+    </a>
+  </div>
+  <div>
+    <a href="./images/0211.jpg" data-lightbox="gallery">
+      <img src="./images/0211.jpg" alt="">
+    </a>
+  </div>
+  <div>
+    <a href="./images/0313.jpg" data-lightbox="gallery">
+      <img src="./images/0313.jpg" alt="">
+    </a>
+  </div>
+</div>
+
+<!-- Lightbox CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
+
+<!-- Lightbox JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
+
+<!-- Owl Carousel JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 10,
+      nav: true,
+      autoplay: true,
+      autoplayTimeout: 3000,
+      responsive: {
+        0: { items: 1 },
+        600: { items: 2 },
+        1000: { items: 3 }
+      }
+    });
+  });
+</script>
+
+
 
 
 
@@ -391,6 +445,48 @@ input[type=radio]:checked {
      <script src="./js/traffic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 10,
+      nav: true,
+      autoplay: true,
+      autoplayTimeout: 3000,
+      responsive: {
+        0: { items: 1 },
+        600: { items: 2 },
+        1000: { items: 3 }
+      }
+    });
+
+    $('.slick-slider').slick({
+      dots: true,
+      infinite: true,
+      speed: 500,
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 3000,
+    });
+
+    const swiper = new Swiper('.swiper-container', {
+      loop: true,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  });
+</script>
     
      <!-- Facebook SDK -->
     <div id="fb-root"></div>
