--- a/health-Edu.html
+++ b/health-Edu.html
@@ -64,7 +64,7 @@
     $('.owl-carousel').owlCarousel({
       loop: true,
       margin: 10,
-      nav: true,
+      nav: false, // 禁用導航按鈕
       autoplay: true,
       autoplayTimeout: 3000,
       responsive: {
@@ -78,8 +78,7 @@
 
 
 
-
-    <style>
+<style>
       /* 針對 iOS 設備的修正 */
       @supports (-webkit-touch-callout: none) {
         .carousel-item {
@@ -119,117 +118,7 @@
     scroll-margin-top: 100px;
   }
 
-
-
-  
-#slider {
-  position: relative;
-  width: 50%;
-  height: 32vw;
-  margin: 150px auto;
-  font-family: 'Helvetica Neue', sans-serif;
-  perspective: 1400px;
-  transform-style: preserve-3d;
-}
-
-input[type=radio] {
-  position: relative;
-  top: 108%;
-  left: 50%;
-  width: 18px;
-  height: 18px;
-  margin: 0 15px 0 0;
-  opacity: 0.4;
-  transform: translateX(-83px);
-  cursor: pointer;
-}
-
-
-input[type=radio]:nth-child(5) {
-  margin-right: 0px;
-}
-
-input[type=radio]:checked {
-  opacity: 1;
-}
-
-
-
-
-#slider label,
-#slider label img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  color: white;
-  font-size: 70px;
-  font-weight: bold;
-  border-radius: 3px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: transform 400ms ease;
-}
-
-
-
-/* Slider Functionality */
-
-/* Active Slide */
-#s1:checked ~ #slide1,
- #s2:checked ~ #slide2,
-  #s3:checked ~ #slide3,
-   #s4:checked ~ #slide4,
-    #s5:checked ~ #slide5 {
-  box-shadow: 0 13px 26px rgba(0,0,0, 0.3), 0 12px 6px rgba(0,0,0, 0.2);
-  transform: translate3d(0%, 0, 0px);
-}
-
-/* Next Slide */
-#s1:checked ~ #slide2,
- #s2:checked ~ #slide3,
-  #s3:checked ~ #slide4,
-   #s4:checked ~ #slide5,
-    #s5:checked ~ #slide1 {
-  box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
-  transform: translate3d(20%, 0, -100px);
-}
-
-
-/* Next to Next Slide */
-#s1:checked ~ #slide3,
- #s2:checked ~ #slide4,
-  #s3:checked ~ #slide5,
-   #s4:checked ~ #slide1,
-    #s5:checked ~ #slide2 {
-  box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
-  transform: translate3d(40%, 0, -250px);
-}
-
-/* Previous to Previous Slide */
-#s1:checked ~ #slide4,
- #s2:checked ~ #slide5,
-  #s3:checked ~ #slide1,
-   #s4:checked ~ #slide2,
-    #s5:checked ~ #slide3 {
-  box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
-  transform: translate3d(-40%, 0, -250px);
-}
-
-/* Previous Slide */
-#s1:checked ~ #slide5,
- #s2:checked ~ #slide1,
-  #s3:checked ~ #slide2,
-   #s4:checked ~ #slide3,
-    #s5:checked ~ #slide4 {
-  box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
-  transform: translate3d(-20%, 0, -100px);
-}
-
-    </style>
+</style>
   </head>
   <body>
     <!-- 導航欄 -->
@@ -297,6 +186,21 @@ input[type=radio]:checked {
       <img src="./images/0313.jpg" alt="鄰里手拉手衛教講座">
     </a>
   </div>
+  <div>
+    <a href="./images/0410.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
+      <img src="./images/0410.jpg" alt="鄰里手拉手衛教講座">
+    </a>
+  </div>
+  <div>
+    <a href="./images/0619.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
+      <img src="./images/0619.jpg" alt="鄰里手拉手衛教講座">
+    </a>
+  </div>
+  <div>
+    <a href="./images/0724.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
+      <img src="./images/0724.jpg" alt="鄰里手拉手衛教講座">
+    </a>
+  </div>   
 </div>
 
     
@@ -452,7 +356,7 @@ input[type=radio]:checked {
     $('.owl-carousel').owlCarousel({
       loop: true,
       margin: 10,
-      nav: true,
+      nav: false, // 禁用導航按鈕
       autoplay: true,
       autoplayTimeout: 3000,
       responsive: {
