--- a/health-Edu.html
+++ b/health-Edu.html
@@ -118,6 +118,37 @@
     scroll-margin-top: 100px;
   }
 
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.lightbox-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 80%;
+}
+
+.lightbox-close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
 </style>
   </head>
   <body>
@@ -163,45 +194,16 @@
     </nav>
 
 
-
-<!-- Owl Carousel HTML -->
 <div class="owl-carousel">
-  <div>
-    <a href="./images/0121.jpg" data-lightbox="gallery" data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
-      <img src="./images/0121.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0121-1.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座"  loading="lazy">
-      <img src="./images/0121-1.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0211.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座"  loading="lazy">
-      <img src="./images/0211.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0313.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
-      <img src="./images/0313.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0410.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
-      <img src="./images/0410.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0619.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
-      <img src="./images/0619.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>
-  <div>
-    <a href="./images/0724.jpg" data-lightbox="gallery"  data-title="鄰里手拉手衛教講座" data-alt="鄰里手拉手衛教講座" loading="lazy">
-      <img src="./images/0724.jpg" alt="鄰里手拉手衛教講座">
-    </a>
-  </div>   
+  <div><img class="img-fluid lightbox-trigger" src="./images/0121.jpg" alt="講座1"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0121-1.jpg" alt="講座2"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0211.jpg" alt="講座3"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0313.jpg" alt="講座5"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0410.jpg" alt="講座6"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0619.jpg" alt="講座7"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0724.jpg" alt="講座8"></div>
 </div>
+
 
     
 <!-- 影片介紹 -->
@@ -343,7 +345,35 @@
       <a href="#" class="to-top-button"><i class="bi bi-arrow-up-circle-fill"></i></a>
     </div>
 
+
+    
+
    <!-- JS -->
+
+
+   <script>
+  // 點擊圖片時開啟 lightbox
+  document.querySelectorAll('.lightbox-trigger').forEach(function(img) {
+  img.addEventListener('click', function() {
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    lightbox.style.display = 'block';
+    lightboxImg.src = this.src; // 使用圖片的 src 作為 Lightbox 的圖片來源
+  });
+});
+
+  // 點擊關閉按鈕或背景關閉 lightbox
+  document.querySelector('.lightbox-close').addEventListener('click', function() {
+  document.getElementById('lightbox').style.display = 'none';
+});
+
+  document.getElementById('lightbox').addEventListener('click', function(e) {
+  if (e.target === this) {
+    this.style.display = 'none';
+  }
+});
+</script>
+
      <script src="./js/traffic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
@@ -393,5 +423,12 @@
      <!-- Facebook SDK -->
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
-</body>
+
+  <!-- Lightbox 放大容器（只有一個） -->
+<div id="lightbox" class="lightbox">
+  <span class="lightbox-close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img">
+</div>
+
+  </body>
 </html>
