--- a/health-Edu.html
+++ b/health-Edu.html
@@ -146,7 +146,9 @@
   font-size: 40px;
   font-weight: bold;
   cursor: pointer;
+  z-index: 10000;
 }
+
 
 
 </style>
@@ -195,13 +197,13 @@
 
 
 <div class="owl-carousel">
-  <div><img class="img-fluid lightbox-trigger" src="./images/0121.jpg" alt="講座1"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0121-1.jpg" alt="講座2"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0211.jpg" alt="講座3"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0313.jpg" alt="講座5"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0410.jpg" alt="講座6"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0619.jpg" alt="講座7"></div>
-  <div><img class="img-fluid lightbox-trigger" src="./images/0724.jpg" alt="講座8"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0121.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0121-1.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0211.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0313.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0410.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0619.jpg" alt="點擊放大"></div>
+  <div><img class="img-fluid lightbox-trigger" src="./images/0724.jpg" alt="點擊放大"></div>
 </div>
 
 
@@ -351,28 +353,42 @@
    <!-- JS -->
 
 
-   <script>
-  // 點擊圖片時開啟 lightbox
+<!-- 縮圖（觸發放大）-->
+<img src="./images/0121.jpg" class="lightbox-trigger" alt="點擊放大" style="max-width: 200px; cursor: pointer;">
+
+<!-- Lightbox 遮罩 -->
+<div id="lightbox" style="display: none; position: fixed; z-index: 9999; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); justify-content: center; align-items: center;">
+  <span class="lightbox-close" style="position: absolute; top: 20px; right: 30px; color: white; font-size: 30px; cursor: pointer;">×</span>
+  <img id="lightbox-img" class="lightbox-content" style="max-width: 90%; max-height: 90%; border: 5px solid white;">
+</div>
+
+<!-- JavaScript -->
+<script>
+  // 點圖片放大
   document.querySelectorAll('.lightbox-trigger').forEach(function(img) {
-  img.addEventListener('click', function() {
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = document.getElementById('lightbox-img');
-    lightbox.style.display = 'block';
-    lightboxImg.src = this.src; // 使用圖片的 src 作為 Lightbox 的圖片來源
+    img.addEventListener('click', function () {
+      const lightbox = document.getElementById('lightbox');
+      const lightboxImg = document.getElementById('lightbox-img');
+      lightbox.style.display = 'flex';
+      lightboxImg.src = this.src;
+    });
   });
-});
 
-  // 點擊關閉按鈕或背景關閉 lightbox
-  document.querySelector('.lightbox-close').addEventListener('click', function() {
-  document.getElementById('lightbox').style.display = 'none';
-});
+  // 點叉叉關閉
+  document.querySelector('.lightbox-close').addEventListener('click', function () {
+    document.getElementById('lightbox').style.display = 'none';
+  });
 
-  document.getElementById('lightbox').addEventListener('click', function(e) {
-  if (e.target === this) {
-    this.style.display = 'none';
-  }
-});
+  // 點背景關閉
+  document.getElementById('lightbox').addEventListener('click', function (e) {
+    if (!e.target.closest('.lightbox-content') && !e.target.closest('.lightbox-close')) {
+      this.style.display = 'none';
+    }
+  });
 </script>
+
+</script>
+
 
      <script src="./js/traffic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -424,11 +440,7 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
 
-  <!-- Lightbox 放大容器（只有一個） -->
-<div id="lightbox" class="lightbox">
-  <span class="lightbox-close">&times;</span>
-  <img class="lightbox-content" id="lightbox-img">
-</div>
+
 
   </body>
 </html>
