--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="zh-Hant">
   <head>
-
+  <meta name="google-site-verification" content="qjGHbhQeUtBQWR7VnOAtK5HTroWM1IhsJdv9iVequnY" />
      <!-- Google tag (gtag.js) -->
+      
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JS9N30QE2L"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
