--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="zh-Hant">
   <head>
   <meta name="google-site-verification" content="qjGHbhQeUtBQWR7VnOAtK5HTroWM1IhsJdv9iVequnY" />
+
+
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N8B3FW2M');</script>
+<!-- End Google Tag Manager --> 
+
+
      <!-- Google tag (gtag.js) -->
       
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JS9N30QE2L"></script>
