Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager --> 
 
 
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8B3FW2M"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
      <!-- Google tag (gtag.js) -->
       
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JS9N30QE2L"></script>
@@ -482,6 +487,8 @@ if (data) {
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
     
+
+
 
   </body>
 </html>
