--- a/health-Edu.html
+++ b/health-Edu.html
@@ -377,6 +377,7 @@
 <!-- JavaScript -->
  <script src="./js/health-Edu.js"></script>
 <script src="./js/traffic.js"></script>
+<script src="./js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
