--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@ if (data) {
 
  <!-- JS -->
   <script src="./js/traffic.js"></script>
+  <script src="./js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/main.js"></script>
 
@@ -488,7 +489,9 @@ if (data) {
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v23.0"></script>
     
 
-
-
+  <div class="to-top-container">
+  <a href="#" class="to-top-button"><i class="bi bi-arrow-up-circle-fill"></i></a>
+</div>
+  
   </body>
 </html>
