--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.1s;">
               <div class="card-body">
-                <img src="./images/doctor1.jpg" alt="沈子翔 院長" class="lazy-load" 
+                <img src="./images/doctor1.webp" alt="沈子翔 院長" class="lazy-load" 
                 loading="lazy">
                 <h5 class="card-title">沈子翔 院長</h5>
                 <span class="doctor-specialty">家庭醫學及兒科疾病</span>
@@ -225,7 +225,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.3s;">
               <div class="card-body">
-                <img src="./images/doctor4.jpg" alt="羅際衛 醫師" class="lazy-load" loading="lazy" >
+                <img src="./images/doctor4.webp" alt="羅際衛 醫師" class="lazy-load" loading="lazy" >
                 <h5 class="card-title">羅際衛 醫師</h5>
                 <span class="doctor-specialty">骨科</span>
               </div>
@@ -234,7 +234,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.4s;">
               <div class="card-body">
-                <img src="./images/doctor3.jpg" alt="賴俊達 醫師" class="lazy-load" loading="lazy">
+                <img src="./images/doctor3.webp" alt="賴俊達 醫師" class="lazy-load" loading="lazy">
                 <h5 class="card-title">賴俊達 醫師</h5>
                 <span class="doctor-specialty">骨科</span>
               </div>
@@ -244,7 +244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.4s;">
               <div class="card-body">
-                <img src="./images/doctor5.jpg" alt="曾啓洲 醫師" class="lazy-load" loading="lazy">
+                <img src="./images/doctor5.webp" alt="曾啓洲 醫師" class="lazy-load" loading="lazy">
                 <h5 class="card-title">曾啓洲 醫師</h5>
                 <span class="doctor-specialty">骨外科</span>
               </div>
@@ -254,7 +254,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <div class="card doctor-card h-100 fade-in" style="animation-delay: 0.2s;">
               <div class="card-body">
-                <img src="./images/doctor2.jpg" alt="王世宗 醫師" class="lazy-load" loading="lazy" >
+                <img src="./images/doctor2.webp" alt="王世宗 醫師" class="lazy-load" loading="lazy" >
                 <h5 class="card-title">王世宗 醫師</h5>
                 <span class="doctor-specialty">骨科</span>
               </div>
