--- a/health-Edu.html
+++ b/health-Edu.html
@@ -202,13 +202,13 @@
 
 
 <div class="owl-carousel">
-  <div><img src="./images/0121.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0121-1.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0211.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0313.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0410.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0619.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0724.webp" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0121.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0121-1.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0211.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0313.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0410.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0619.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div><img src="./images/0724.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
 </div>
 
 
