--- a/health-Edu.html
+++ b/health-Edu.html
@@ -202,13 +202,27 @@
 
 
 <div class="owl-carousel">
-  <div><img src="./images/0121.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0121-1.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0211.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0313.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0410.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0619.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
-  <div><img src="./images/0724.jpg" alt="點擊放大" class="img-fluid lightbox-trigger" ></div>
+  <div>
+    <img src="./images/thumbs/0121.jpg" data-large="./images/0121.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0121-1.jpg" data-large="./images/0121-1.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0211.jpg" data-large="./images/0211.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0313.jpg" data-large="./images/0313.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0410.jpg" data-large="./images/0410.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0619.jpg" data-large="./images/0619.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
+  <div>
+    <img src="./images/thumbs/0724.jpg" data-large="./images/0724.jpg" alt="點擊放大" class="img-fluid lightbox-trigger">
+  </div>
 </div>
 
 
