--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
     <!-- Preconnect 提前建立連接 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
+
+    <link rel="canonical" href="https://allageclinic.github.io/allages">
     
     <meta property="og:title" content="樂活全齡綜合診所官網">
     <meta property="og:image" content="/images/logo01.jpg">
