--- a/environment.html
+++ b/environment.html
@@ -145,6 +145,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     
+
+    <link rel="canonical" href="https://allageclinic.github.io/allages">
     <meta property="og:title" content="診所環境介紹 | 樂活全齡綜合診所">
     <meta property="og:image" content="./image/logo01.png">
     <meta name="description" content="歡迎參觀樂活全齡綜合診所的環境，我們提供舒適、現代化的診療環境，為您帶來優質的醫療體驗。">
