--- a/health-Edu.html
+++ b/health-Edu.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://all-age.github.io/allage/">
+    <link rel="canonical" href="https://allageclinic.github.io/allages">
     <meta property="og:title" content="樂活全齡綜合診所官網">
     <meta property="og:image" content="/images/logo01.jpg">
     <meta name="description" content="樂活全齡照顧全民 | 本院位於仁德區,由家庭醫學專科、骨科專科醫師提供成人與小兒各項醫療服務,並設有X光機檢查與復健治療。
