--- a/Treatment.html
+++ b/Treatment.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://allageclinic.github.io/allages"/>
     <meta property="og:image" content="https://allageclinic.github.io/allages/images/thumbs/BANNER_FB.jpg"/>
     <meta property="product:retailer_item_id" content="facebook_61560249694438">
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:type" content="images/jpeg" />
     <meta property="og:image:width" content="612"/>
     <meta property="og:image:height" content="689"/>
     <meta property="og:image:alt" content="樂活全齡綜合診所官網" />
