--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,14 @@
 <html lang="zh-Hant">
   <head>
 
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N8B3FW2M');</script>
+<!-- End Google Tag Manager -->
+
      <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JS9N30QE2L"></script>
     <script>
@@ -79,6 +87,11 @@
 
 
   <body>
+
+     <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8B3FW2M"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <!-- 導航欄 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
