--- a/sitemap.html
+++ b/sitemap.html
@@ -126,7 +126,7 @@ Total pages: 6</span>
 <li class="lpage"><a href="https://allageclinic.github.io/allages/" title="首頁｜樂活全齡綜合診所｜台南仁德家醫科・復健科・長照服務｜全齡健康照顧">首頁｜樂活全齡綜合診所｜台南仁德家醫科・復健科・長照服務｜全齡健康照顧</a></li>
 <li class="lpage"><a href="https://allageclinic.github.io/allages/index.html" title="首頁｜樂活全齡綜合診所｜台南仁德家醫科・復健科・長照服務｜全齡健康照顧">首頁｜樂活全齡綜合診所｜台南仁德家醫科・復健科・長照服務｜全齡健康照顧</a></li>
 <li class="lpage"><a href="https://allageclinic.github.io/allages/aboutus.html" title="診所簡介 | 樂活全齡綜合診所 | 樂活全齡 照顧全民">診所簡介 | 樂活全齡綜合診所 | 樂活全齡 照顧全民</a></li>
-<li class="lpage"><a href="https://allageclinic.github.io/allages/Treatment.html" title="診療項目｜樂活全齡綜合診所｜">診療項目｜樂活全齡綜合診所｜</a></li>
+<li class="lpage"><a href="https://allageclinic.github.io/allages/treatment.html" title="診療項目｜樂活全齡綜合診所｜">診療項目｜樂活全齡綜合診所｜</a></li>
 <li class="lpage"><a href="https://allageclinic.github.io/allages/health-Edu.html" title="衛教宣導｜樂活全齡綜合診所｜">衛教宣導｜樂活全齡綜合診所｜</a></li>
 <li class="lpage last-page"><a href="https://allageclinic.github.io/allages/contact.html" title=" 聯絡我們 | 樂活全齡綜合診所 | 樂活全齡 照顧全民"> 聯絡我們 | 樂活全齡綜合診所 | 樂活全齡 照顧全民</a></li>
 </ul>
