--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://allageclinic.github.io/allages/index.html">
+    <link rel="canonical" href="https://allageclinic.github.io/allages">
     
-    <meta property="og:url" content="https://allageclinic.github.io/allages/index.html"/>
+    <meta property="og:url" content="https://allageclinic.github.io/allages"/>
     <meta property="og:image" content="https://allageclinic.github.io/allages/images/thumbs/BANNER_FB.jpg"/>
     <meta property="product:retailer_item_id" content="facebook_61560249694438">
     <meta property="og:image:type" content="images/jpeg" />
