--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <source media="(max-width: 1024px)" srcset="./images/BANNER_1024.jpg">
               <img src="./images/BANNER_1920.jpg" class="d-block w-100 banner-img" alt="樂活全齡診所廣告" loading="eager" decoding="async">
             </picture>
+            </div>
+           <div class="carousel-item">
+             <picture class="banner-picture">
+              <source media="(max-width: 360px)" srcset="./images/0917banner_360.jpg"> 
+              <source media="(max-width: 576px)" srcset="./images/0917banner_360.jpg">       
+              <source media="(max-width: 768px)" srcset="./images/0917banner_360.jpg">
+              <source media="(max-width: 1024px)" srcset="./images/0917banner_360.jpg">
+              <img src="./images/0917banner_1920.jpg" class="d-block w-100 banner-img" alt="樂活全齡診所廣告" loading="eager" decoding="async">
+            </picture>
+           </div>
+  
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
