--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </section>
 
     <!-- 門診時間表 -->
-    <section id="weekfrom" class="py-5 bg-light">
+    <section id="weekfrom">
       <div class="container item allageweek">
         <h2 class="text-center mb-3 fade-in">本週門診表 <br><span id="weekRange">8/4～8/8</span></h2>
         <p class="txttxt mb-3" >〈週三時間為14:00-17:00〉</p> 
