--- a/index.html
+++ b/index.html
@@ -50,17 +50,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://allageclinic.github.io/allages/" />
     <meta property="og:url" content="https://allageclinic.github.io/allages"/>
-    <meta property="og:image" content="https://allageclinic.github.io/allages/images/thumbs/BANNER_FB.jpg"/>
+    <meta property="og:image" content="https://allageclinic.github.io/allages//img/og-image1.jpg" />
     <meta property="product:retailer_item_id" content="facebook_61560249694438">
     <meta property="og:image:type" content="images/jpeg" />
     <meta property="og:image:width" content="612"/>
     <meta property="og:image:height" content="689"/>
     <meta property="og:image:alt" content="樂活全齡綜合診所官網" />
     <meta property="og:title" content="首頁｜樂活全齡綜合診所｜台南仁德家醫科・骨科・復健科・長照服務｜全齡健康照顧">
-    <meta name="og:description" content="首頁 | 樂活全齡綜合診所 | 樂活全齡 照顧全民 | 本院位於仁德區,由家庭醫學專科、骨科專科醫師提供成人與小兒各項醫療服務,並設有X光機檢查與復健治療。
-    包含：三高與各式急慢性疾病、常見皮膚疾患、感冒喉嚨痛鼻炎、腸胃道疾病與骨科疾患。">
+    <meta name="og:description" content="樂活全齡綜合診所位於台南仁德，提供家醫科、復健科與長照服務。
+醫師親切、診療安心，從急慢性疾病到預防保健，守護全齡族群健康。
+電話 06-2791515,地址 仁德區中正路二段1225號。">
     <meta name="og:keywords" content="樂活全齡綜合診所,樂活全齡綜合,樂活全齡診所,仁德樂活全齡,仁德樂活診所,仁德樂活,台南家醫科,仁德家醫科診所,家庭醫學,台南家庭醫學,仁德家庭醫學,仁德皮膚,全齡綜合診所,台南樂活全齡,台南仁德樂活全齡,台南仁德全齡綜合診所,台南仁德全齡綜合診所,全齡診所,樂活全齡,兒科疾病,慢性整合醫學,社區與預防醫學,仁德診所,樂活全齡照顧全民">
-    <title>首頁｜樂活全齡照顧全民｜台南仁德家醫科・復健科・長照服務｜樂活全齡綜合診所</title>
+
+
+    <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="樂活全齡綜合診所｜台南仁德 家醫科・復健科・長照服務">
+  <meta name="twitter:description" content="家醫科、復健科與長照整合服務，守護全齡健康。">
+  <meta name="twitter:image" content="https://allageclinic.github.io/allages/img/og-image.jpg">
+
+    <title>台南仁德家醫科、骨科、復健與長照｜樂活全齡綜合診所</title>
 
     
       <style>
@@ -73,6 +82,29 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     scroll-margin-top: 100px;
   }
 </style>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MedicalClinic",
+  "name": "樂活全齡綜合診所",
+  "url": "https://allageclinic.github.io/allages/",
+  "telephone": "+886-6-2791515",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "台南市仁德區中正路二段1225號",
+    "addressLocality": "仁德區",
+    "addressRegion": "台南市",
+    "addressCountry": "TW"
+  },
+  "openingHours": "Mo-Sa 08:00-17:30",
+  "image": "https://allageclinic.github.io/allages/img/clinic-front.jpg",
+  "sameAs": [
+    "https://www.facebook.com/61560249694438/",
+    "https://www.youtube.com/playlist?list=PLv7vQ4iAxYnbnVKd7-WTFlp0sBmfZt9my"
+  ]
+}
+</script>
   </head>
 
   
