--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta property="og:image:height" content="689"/>
     <meta property="og:image:alt" content="樂活全齡綜合診所官網" />
     <meta property="og:title" content="首頁｜樂活全齡綜合診所｜台南仁德家醫科・骨科・復健科・長照服務｜全齡健康照顧">
-    <meta name="og:description" content="樂活全齡綜合診所位於台南仁德，提供家醫科、復健科與長照服務。
+    <meta name="og:description" content="樂活全齡綜合診所位於台南仁德，提供家醫科、骨科、復健與長照服務。
 醫師親切、診療安心，從急慢性疾病到預防保健，守護全齡族群健康。
 電話 06-2791515,地址 仁德區中正路二段1225號。">
-    <meta name="og:keywords" content="樂活全齡綜合診所,樂活全齡綜合,樂活全齡診所,仁德樂活全齡,仁德樂活診所,仁德樂活,台南家醫科,仁德家醫科診所,家庭醫學,台南家庭醫學,仁德家庭醫學,仁德皮膚,全齡綜合診所,台南樂活全齡,台南仁德樂活全齡,台南仁德全齡綜合診所,台南仁德全齡綜合診所,全齡診所,樂活全齡,兒科疾病,慢性整合醫學,社區與預防醫學,仁德診所,樂活全齡照顧全民">
+    <meta name="og:keywords" content="樂活全齡綜合診所,樂活全齡綜合,樂活全齡診所,仁德樂活全齡,仁德樂活診所,仁德樂活,台南家醫科,仁德家醫科診所,家庭醫學,台南家庭醫學,仁德家庭醫學,仁德皮膚,全齡綜合診所,PRP增生療法,玻尿酸注射,PRP注射,仁德骨科,仁德全齡骨科,仁德樂活骨科,樂活全齡骨科,仁德骨外科,仁德骨科復健,仁德復健,台南樂活全齡,台南仁德樂活全齡,台南仁德全齡綜合診所,台南仁德全齡綜合診所,全齡診所,樂活全齡,兒科疾病,慢性整合醫學,社區與預防醫學,仁德診所,樂活全齡照顧全民">
 
 
     <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="樂活全齡綜合診所｜台南仁德 家醫科・復健科・長照服務">
-  <meta name="twitter:description" content="家醫科、復健科與長照整合服務，守護全齡健康。">
+  <meta name="twitter:description" content="家醫科、骨科、復健與長照整合服務，守護全齡健康。">
   <meta name="twitter:image" content="https://allageclinic.github.io/allages/img/og-image.jpg">
 
     <title>台南仁德家醫科、骨科、復健與長照｜樂活全齡綜合診所</title>
