--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="樂活全齡綜合診所｜台南仁德 家醫科・復健科・長照服務">
+  <meta name="twitter:title" content="樂活全齡綜合診所｜台南仁德｜家醫科・骨科・復健・長照服務">
   <meta name="twitter:description" content="家醫科、骨科、復健與長照整合服務，守護全齡健康。">
   <meta name="twitter:image" content="https://allageclinic.github.io/allages/img/og-image.jpg">
 
